@@ -88,6 +88,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #21515: tempfile.TemporaryFile now uses os.O_TMPFILE flag is available.
+
 - Issue #21618: The subprocess module could fail to close open fds that were
   inherited by the calling process and already higher than POSIX resource
   limits would otherwise allow.  On systems with a functioning /proc/self/fd
